--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ flutter:
   assets:
     - assets/Vector.png
     - assets/ioasyspokédex.png
+    - assets/Rectangle15.png
+    - assets/Group17.png
+    - assets/Switch.png
+    - assets/heart.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
