--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   cupertino_http: ^1.4.0
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
