--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_http: ^1.4.0
   cached_network_image: ^3.1.0
   shared_preferences: ^2.0.9
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
