--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/Group17.png
     - assets/Switch.png
     - assets/heart.png
+    - assets/Frame.png
+    - assets/Frame1.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
